refactor: replace get() with getLast() for improved clarity in bottomRow card retrieval